--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Basic Practice</title>
     <link rel="stylesheet" href="./style.css">
+    <link rel="shortcut icon" href="./avatar-1962749112.jpg">
 </head>
 <body>
     
