i added my header and a title for my project

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="shortcut icon" href="./avatar-1962749112.jpg">
 </head>
 <body>
-    
+    <header class="header">
+        <h1 class="logo-name">Basic Practic</h1>
+    </header>
 </body>
 </html>
