--- a/index.html
+++ b/index.html
@@ -10,6 +10,18 @@
 <body>
     <header class="header">
         <h1 class="logo-name">Basic Practic</h1>
+        <div class="navbar">
+            <nav>
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Support</a></li>
+                </ul>
+            </nav>
+            <a href="#" class="logo">
+                <img src="./avatar-1962749112.jpg" alt="Logo">
+            </a>
+        </div>
     </header>
 </body>
 </html>
