i added sidebar to my project

--- a/index.html
+++ b/index.html
@@ -23,5 +23,10 @@
             </a>
         </div>
     </header>
+    <div class="main">
+        <aside>
+            <p>Sidebar Content</p>
+        </aside>
+    </div>
 </body>
 </html>
