i added main to my project

--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
         <aside>
             <p>Sidebar Content</p>
         </aside>
+        <main>
+            <p>Main Content</p>
+        </main>
     </div>
 </body>
 </html>
